5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1723_2495.log
== TEST (2019-05-07 21:07:41) 
-- CODE:
a = 0
while a!= -1:
	a = int(input('digite um numero:'))
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:08:34) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:09:24) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:09:39) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
-- EXECUTION TIME:
0.129948
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:09:41) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:10:31) 
-- CODE:
	if a//2 == 0:
		print('PAR')
	else: 
		print('IMPAR')
a = 0
while a != -1:
	a = int(input('digite um numero:'))

-- ERROR:
File "XXXX", line 1
    if a//2 == 0:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:12:06) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		if a//2 == 0:
			print('PAR')
		else: 
			print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:12:12) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		if a//2 == 0:
			print('PAR')
		else: 
			print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:12:40) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		if a//2 == 0:
			print('PAR')
		else: 
			print('IMPAR')
-- OUTPUT:
PAR
IMPAR
IMPAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 21:15:19) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		if a%2 == 0:
			print('PAR')
		else: 
			print('IMPAR')
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 21:15:35) 
-- CODE:
a = 0
while a != -1:
	a = int(input('digite um numero:'))
	if a != -1:
		if a%2 == 0:
			print('PAR')
		else: 
			print('IMPAR')
	
-- EXECUTION TIME:
0.178504
-- TEST CASE 1:
---- input:
0
22
44
-1
---- correct output:
PAR
PAR
PAR
---- user output:
PAR
PAR
PAR
-- TEST CASE 2:
---- input:
1
33
55
777
9999
-1
---- correct output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
---- user output:
IMPAR
IMPAR
IMPAR
IMPAR
IMPAR
-- TEST CASE 3:
---- input:
10528
4999
123
45
6
-1
---- correct output:
PAR
IMPAR
IMPAR
IMPAR
PAR
---- user output:
PAR
IMPAR
IMPAR
IMPAR
PAR
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
